# srsDemo

./: README.md
srsDemo/: .gitignore  package.json  srsDemo.sln  srsdemo.esproj
srsDemo/src/: App.jsx  Canvas.jsx  Shape.jsx  main.jsx
srsDemo/src/componenets/: Circle.jsx  Rectangle.jsx  ShapeRenderer.jsx
srsDemo/src/components/: AuthForm.jsx  Canvas.jsx  Circle.jsx  CreateUserForm.jsx  Rectangle.jsx  ShapeRenderer.jsx
srsDemo/src/context/: AuthContext.jsx  WebSocketContext.jsx
srsDemo/src/utils/: EventHandlers.jsx  WebSocketContext.jsx
srsDemoDaemon/: .gitignore  CMakeLists.txt  CMakePresets.json  authDatabaseManager.cpp  authDatabaseManager.h  databaseManager.cpp  databaseManager.h  packages.config  srsDemoDaemon.cpp  srsDemoDaemon.sln  srsDemoDaemon.vcxproj  srsDemoDaemon.vcxproj.filters  svgDatabaseManager.cpp  svgDatabaseManager.h  svg_database.db
